welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: value update is not a member of plm.universe.Direction
	if(getDirection()=Direction.EST)
           ^SnakeBuggle:30: error: value update is not a member of plm.universe.Direction
		if(getDirection()=Direction.EST)
                   ^